apply shimmer feature for loading

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
-
-TICKETMASTER_API_KEY=eH4ENHkgTZapDk7VzCxYcuL5I4sgGBGg
+SUPABASE_API_KEY=your supabase api key 
+TICKETMASTER_API_KEY=your ticket master api key
